Added sorting and localisation.

--- a/ProfileBook/ProfileBook/Views/SignUpPage.xaml
+++ b/ProfileBook/ProfileBook/Views/SignUpPage.xaml
@@ -1,20 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:resource="clr-namespace:ProfileBook.Resources"
              x:Class="ProfileBook.Views.SignUpPage"
-             Title="{Binding Title}">
+             Title="{x:Static resource:Resource.SignUpPageTitle}">
     <ContentPage.Content>
         <StackLayout Padding="36, 36, 36, 50" HorizontalOptions="FillAndExpand">
 
             <StackLayout VerticalOptions="CenterAndExpand">
-                <Entry Placeholder="Login" Text="{Binding Login}" />
-                <Entry Placeholder="Password" IsPassword="True" Text="{Binding Password}" />
-                <Entry Placeholder="Confirm Password" IsPassword="True" Text="{Binding ConfirmPassword}" />
+                <Entry Placeholder="{x:Static resource:Resource.Login}" 
+                       Text="{Binding Login}" />
+                <Entry Placeholder="{x:Static resource:Resource.Password}" 
+                       IsPassword="True" 
+                       Text="{Binding Password}" />
+                <Entry Placeholder="{x:Static resource:Resource.ConfPassPlaceholder}" 
+                       IsPassword="True" 
+                       Text="{Binding ConfirmPassword}" />
             </StackLayout>
 
             <Button BackgroundColor="#CC6633" 
                     VerticalOptions="CenterAndExpand" 
-                    Text="SIGN UP"
+                    Text="{x:Static resource:Resource.SignUpButton}"
                     Command="{Binding SignUpTapCommand}" 
                     IsEnabled="{Binding EnabledButton}" />
             
