--- a/ProfileBook/ProfileBook/Views/AddProfilePage.xaml
+++ b/ProfileBook/ProfileBook/Views/AddProfilePage.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:resource="clr-namespace:ProfileBook.Resources"
              x:Class="ProfileBook.Views.AddProfilePage"
-             Title="{Binding Title}">
+             Title="{x:Static resource:Resource.AddProfilePageTitle}">
     <ContentPage.ToolbarItems>
         <ToolbarItem IconImageSource="ic_save.png" 
                      Command="{Binding SaveProfileTapCommand}"/>
@@ -11,14 +12,16 @@
     <ContentPage.Content>
         <StackLayout>
             
-            <ImageButton BackgroundColor="White" 
+            <ImageButton BackgroundColor="Transparent" 
                          HeightRequest="160"
                          Source="{Binding Image}"
                          Command="{Binding PickImageCommand}" />
-            
-            <Entry Placeholder="NickName" Text="{Binding NickName}" />
-            <Entry Placeholder="Name" Text="{Binding Name}" />
-            <Editor Placeholder="Description" 
+
+            <Entry Placeholder="{x:Static resource:Resource.NickName}"
+                   Text="{Binding NickName}" />
+            <Entry Placeholder="{x:Static resource:Resource.Name}" 
+                   Text="{Binding Name}" />
+            <Editor Placeholder="{x:Static resource:Resource.Description}" 
                     HeightRequest="160" 
                     BackgroundColor="#D3D3D3"
                     Text="{Binding Description}" />
