--- a/ProfileBook/ProfileBook/Views/MainListPage.xaml
+++ b/ProfileBook/ProfileBook/Views/MainListPage.xaml
@@ -2,14 +2,16 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:resource="clr-namespace:ProfileBook.Resources"
              x:Class="ProfileBook.Views.MainListPage"
              x:Name="profile"
-             Title="{Binding Title}">
+             Title="{x:Static resource:Resource.MainListPageTitle}">
 
     <ContentPage.ToolbarItems>
         <ToolbarItem IconImageSource="ic_exit_to_app.png" 
                      Command="{Binding SignOutTapCommand}" />
-        <ToolbarItem IconImageSource="ic_settings.png" />
+        <ToolbarItem IconImageSource="ic_settings.png" 
+                     Command="{Binding SettingsTapCommand}"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
@@ -29,10 +31,10 @@
                         <DataTemplate>
                             <ViewCell>
                                 <ViewCell.ContextActions>
-                                    <MenuItem Text="Edit"
+                                    <MenuItem Text="{x:Static resource:Resource.EditButton}"
                                               Command="{Binding Path=BindingContext.EditProfileTapCommand, Source={x:Reference profile}}"
                                               CommandParameter="{Binding .}" />
-                                    <MenuItem Text="Delete"
+                                    <MenuItem Text="{x:Static resource:Resource.DeleteButton}"
                                               Command="{Binding Path=BindingContext.DeleteProfileTapCommand, Source={x:Reference profile}}"
                                               CommandParameter="{Binding .}" />
                                 </ViewCell.ContextActions>
