--- a/ProfileBook/ProfileBook/Views/SignInPage.xaml
+++ b/ProfileBook/ProfileBook/Views/SignInPage.xaml
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:resource="clr-namespace:ProfileBook.Resources"
              x:Class="ProfileBook.Views.SignInPage"
-             Title="{Binding Title}">
+             Title="{x:Static resource:Resource.SignInPageTitle}">
     <ContentPage.Content>
         <StackLayout Padding="36, 36, 36, 50" HorizontalOptions="FillAndExpand">
 
             <StackLayout VerticalOptions="CenterAndExpand">
-                <Entry Placeholder="Login" 
+                <Entry Placeholder="{x:Static resource:Resource.Login}" 
                        Text="{Binding Login}" />
-                <Entry Placeholder="Password" 
+                <Entry Placeholder="{x:Static resource:Resource.Password}" 
                        IsPassword="True" 
                        Text="{Binding Password} "/>
             </StackLayout>
@@ -17,7 +18,7 @@
             <StackLayout VerticalOptions="EndAndExpand">
                 
                 <Button BackgroundColor="#CC6633"
-                        Text="SIGN IN"
+                        Text="{x:Static resource:Resource.SignInButton}"
                         Command="{Binding SignInTapCommand}"
                         IsEnabled="{Binding EnabledButton}" />
                 
@@ -26,7 +27,7 @@
                         <FormattedString>
                             <Span TextColor="Blue" 
                                   TextDecorations="Underline"
-                                  Text="SIGN UP">
+                                  Text="{x:Static resource:Resource.SignUpButton}">
                                 <Span.GestureRecognizers>
                                     <TapGestureRecognizer Command="{Binding SignUpTapCommand}" />
                                 </Span.GestureRecognizers>
