--- a/ProfileBook/ProfileBook/Views/SignInPage.xaml
+++ b/ProfileBook/ProfileBook/Views/SignInPage.xaml
@@ -3,21 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:resource="clr-namespace:ProfileBook.Resources"
              x:Class="ProfileBook.Views.SignInPage"
+             Style="{StaticResource PageStyle}"
              Title="{x:Static resource:Resource.SignInPageTitle}">
+
     <ContentPage.Content>
+
         <StackLayout Padding="36, 36, 36, 50" HorizontalOptions="FillAndExpand">
 
             <StackLayout VerticalOptions="CenterAndExpand">
-                <Entry Placeholder="{x:Static resource:Resource.Login}" 
+                <Entry Placeholder="{x:Static resource:Resource.Login}"
+                       Style="{StaticResource EntryStyle}"
                        Text="{Binding Login}" />
-                <Entry Placeholder="{x:Static resource:Resource.Password}" 
+                <Entry Placeholder="{x:Static resource:Resource.Password}"
+                       Style="{StaticResource EntryStyle}"
                        IsPassword="True" 
                        Text="{Binding Password} "/>
             </StackLayout>
 
             <StackLayout VerticalOptions="EndAndExpand">
-                
-                <Button BackgroundColor="#CC6633"
+
+                <Button Style="{StaticResource SignButtonStyle}"
                         Text="{x:Static resource:Resource.SignInButton}"
                         Command="{Binding SignInTapCommand}"
                         IsEnabled="{Binding EnabledButton}" />
@@ -25,7 +30,7 @@
                 <Label HorizontalOptions="Center">
                     <Label.FormattedText>
                         <FormattedString>
-                            <Span TextColor="Blue" 
+                            <Span Style="{StaticResource SignUpButtonStyle}" 
                                   TextDecorations="Underline"
                                   Text="{x:Static resource:Resource.SignUpButton}">
                                 <Span.GestureRecognizers>
