--- a/ProfileBook/ProfileBook/Views/SignUpPage.xaml
+++ b/ProfileBook/ProfileBook/Views/SignUpPage.xaml
@@ -3,22 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:resource="clr-namespace:ProfileBook.Resources"
              x:Class="ProfileBook.Views.SignUpPage"
+             Style="{StaticResource PageStyle}"
              Title="{x:Static resource:Resource.SignUpPageTitle}">
     <ContentPage.Content>
         <StackLayout Padding="36, 36, 36, 50" HorizontalOptions="FillAndExpand">
 
             <StackLayout VerticalOptions="CenterAndExpand">
-                <Entry Placeholder="{x:Static resource:Resource.Login}" 
+                <Entry Placeholder="{x:Static resource:Resource.Login}"
+                       Style="{StaticResource EntryStyle}"
                        Text="{Binding Login}" />
-                <Entry Placeholder="{x:Static resource:Resource.Password}" 
+                <Entry Placeholder="{x:Static resource:Resource.Password}"
+                       Style="{StaticResource EntryStyle}"
                        IsPassword="True" 
                        Text="{Binding Password}" />
-                <Entry Placeholder="{x:Static resource:Resource.ConfPassPlaceholder}" 
+                <Entry Placeholder="{x:Static resource:Resource.ConfPassPlaceholder}"
+                       Style="{StaticResource EntryStyle}"
                        IsPassword="True" 
                        Text="{Binding ConfirmPassword}" />
             </StackLayout>
 
-            <Button BackgroundColor="#CC6633" 
+            <Button Style="{StaticResource SignButtonStyle}"
                     VerticalOptions="CenterAndExpand" 
                     Text="{x:Static resource:Resource.SignUpButton}"
                     Command="{Binding SignUpTapCommand}" 
